# codename

./: LICENSE  README.md  pyproject.toml
codename/: __init__.py  cli.py
